Eurekaサービスの登録-複数のサービスを登録　完成 1.同一のサービス名であるが、複数のサービスを登録する。

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     password: 1234
     driver-class-name: com.mysql.jdbc.Driver
   application:
-    name: userserver #orderのサービス名
+    name: orderserver #orderのサービス名
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
