Nacosの登録　完成 1.依頼注入 2.#nacosサービスアドレスを配置

--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -26,10 +26,22 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
         <!--eurekaクライアント依頼-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--        </dependency>-->
+
+        <!-- nacosクライアント依頼管理 -->
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+
+        <!-- nacos配置依頼管理 -->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
         <finalName>app</finalName>
