--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -8,6 +8,10 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: orderserver #orderのサービス名
+  cloud:
+    nacos:
+      server-addr: localhost:8848 #nacosサービスアドレス
+
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
@@ -17,7 +21,19 @@ logging:
     cn.itcast: debug
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
-eureka:
-  client:
-    service-url: # eurekaのアドレス情報
-      defaultZone: http://127.0.0.1:10086/eureka
+
+
+userservice:
+  ribbon:
+    NFLoadBalancerRuleClassName: com.alibaba.cloud.nacos.ribbon.NacosRule  #負荷分散・ロードバランス　ルール
+
+ribbon:
+  eager-load:
+    enabled: true # 前読みをオンにする
+    clients: userservice # サービス指名
+
+
+#    eureka:
+    #  client:
+    #    service-url: # eurekaのアドレス情報
+    #      defaultZone: http://127.0.0.1:10086/eureka
