--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848
+      discovery:
+        cluster-name: Yokohama #横浜　
+
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
