Nacosにおいてネームスペースの配置　完成 1.異なるネームスペースにおいては、互いにアクセスできず。

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
       server-addr: localhost:8848
       discovery:
         cluster-name: Yokohama #横浜　
+        namespace: 6aa37189-3485-4030-96fe-6f8acaa3e64f #ネームスペース　
 
 mybatis:
   type-aliases-package: cn.itcast.order.pojo
