Nacosにおいて非臨時サービスの配置　完成 1.非臨時サービスは消去されずに、持続に存在し、再起動を待ち受ける。

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       discovery:
         cluster-name: Yokohama #横浜　
         namespace: 6aa37189-3485-4030-96fe-6f8acaa3e64f #ネームスペース　
+        ephemeral: false #非臨時サービスに設定
 
 mybatis:
   type-aliases-package: cn.itcast.order.pojo
